src/styles/common.css
/* GENERAL */

:root {
	--bg-light-color: #ffffff;
	--bg-mid-color: #d9d9d9;
	--bg-dark-color: #777777;
	--focus-color: #36b1f2;
	--font-focus-color: rgb( 15, 15, 15 );
	--font-mid-color: rgb( 105, 105, 105 );
	--font-light-color: #bdbdbd;
	--font-on-dark: #ffffff;
}

body {
	margin: 0;
	overflow-x: hidden;
	background-color: var(--bg-light-color);
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

* {
	font-family: 'Barlow', sans-serif;
	font-weight: 500;
	color:  var(--font-focus-color);
	box-sizing: border-box;
}

h1 {
	margin: unset;
}

h2 {
	margin: unset;
}

p {
	margin: unset;
}

button {
	background: none;
	color: inherit;
	border-style: solid;
	border-width: 2px;
	border-color: var(--font-focus-color);
	border-radius: 900px;
	padding: 8px 12px;
	font: inherit;
	cursor: pointer;
	outline: inherit;
}

a {
	text-underline-offset: 0.15em;
	text-decoration-thickness: 0.15em;
	text-decoration-color: var(--font-light-color);
	transition: all 0.2s;
}

	a:hover {
		text-decoration-color: var(--font-mid-color);
	}

/* MAIN */

main {
	display: flex;
	flex-direction: column;
	align-items: center;
	flex-grow: 1;
}

	main > section {
		position: relative;
		width: calc( 100vh + 25vw );
		max-width: 100%;
	}

/* HEADER */

body > header {
	position: sticky;
	display: flex;
	justify-content: space-between;
	top: 0;
	padding: 15px 32px;
	border-bottom: solid var(--bg-mid-color) 1px;
	background-color: var(--bg-light-color);
	z-index: 100;
}

	body > header #logo {
		width: 170px;
	}

	body > header nav {
		display: flex;
		justify-content: center;
		align-items: center;
	}

		body > header nav a {
			margin: 0 8px;
		}

/* FOOTER */

body > footer {
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	bottom: 0;
	margin-top: 55px;
	padding: 25px;
	background-color: var(--bg-dark-color);
}

	body > footer > a {
		color: var(--font-light-color);
		text-decoration-color: var(--font-light-color);
	}

		body > footer > a:hover {
			text-decoration-color: var(--font-mid-color);
		}

	body > footer > nav *:not(first-child) {
		margin-left: 15px;
	}

@media screen and (max-width: 620px) {
	body > footer {
		flex-direction: column-reverse;
	}

	body > footer > nav {
		margin-bottom: 10px;
	}
}

/* ARTICLE LAYOUT */

.basic-article > div {
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: center;
	max-width: 92%;
}

@media screen and (max-width: 620px) {
	.basic-article > div {
		max-width: 100%;
	}
}

	.basic-article header {
		position: relative;
		width: calc( 100vh + 25vw );
		max-width: 100%;
		max-height: 50vh;
		display: flex;
		justify-content: center;
		align-items: center;
		overflow: hidden;
	}

		.basic-article header img {
			width: 100%;
			object-fit: cover;
		}

	.basic-article article {
		position: absolute;
		bottom: 15%;
		width: calc( 90vh + 10vw );
		max-width: calc( 89% - 15px );
		background-color: var( --bg-light-color );
		transform: translateY( 100% );
		padding: 30px calc( 5px + 3% );
	}

	@media screen and (max-width: 620px) {
		.basic-article article {
			bottom: 0;
			padding: 30px 0;
		}
	}

